--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = "sdarshn.dev"
 languageCode = "en-us"
-title = "sai d."
+title = "Sai d."
 theme = "hugo-ink"
 paginate = 5
 
@@ -14,7 +14,7 @@ googleAnalytics = "UA-123-45"
 disqusShortname = "ink-demo"
 
 [params]
-	subtitle = "tinkerer, tragammatic pessimist and absolute learner"
+	subtitle = "tinkerer, pragammatic pessimist and absolute learner"
 
 	# Optional 64x64 avatar image.
 	avatar = "/images/phplumpkB_c1PM.jpg"
@@ -53,7 +53,7 @@ weight = 4
 [[params.social]]
 name = "Github"
 icon = "github"
-url = "https://github.com/knadh/hugo-ink"
+url = "https://github.com/saidarshan7/"
 
 [[params.social]]
 name = "RSS"
