--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "sdarshn.dev"
+baseURL = "https://saidarshan7.github.io/"
 languageCode = "en-us"
 title = "Sai d."
 theme = "hugo-ink"
@@ -36,8 +36,8 @@ url = "/"
 weight = 1
 
 [[menu.main]]
-name = "All posts"
-url = "/posts"
+name = "Blogs"
+url = "/blogs"
 weight = 2
 
 [[menu.main]]
